data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2098.wast
;; 9. **Test 9: Conditional Return from Imported Function Based on If's Condition**:    - Description: An imported function returns conditionally based on the condition checked within an `if` instruction, ensuring stack and control flow adherence.    - Specific Constraint: The stack and labels must adhere to the `blocktype` when conditional returns are based on `if` evaluation.    - Relation to Control Flow: Checks if conditional returns from external functions align with expected control flows within `if` instructions.

(assert_invalid
  (module
    (func $conditional-return
      (import "env" "conditional" (func $conditional (result i32)))
      (if (result i32)
        (call $conditional)
        (then (i32.const 42))
        (else)
      )
    )
  )
  "type mismatch"
)